--- a/app/views/mobile app stock requisition/home.html
+++ b/app/views/mobile app stock requisition/home.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="list">
-          <a href="#" class="colorless">
+          <a href="incoming-delivery.html" class="colorless">
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-1.png"> -->
@@ -132,7 +132,7 @@
         </div>
 
         <div class="list">
-          <a href="#" class="colorless">
+          <a href="outgoing-delivery.html" class="colorless">
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-2.png"> -->
