Minor fixes to stock count links

--- a/app/views/mobile app stock requisition/home.html
+++ b/app/views/mobile app stock requisition/home.html
@@ -47,7 +47,7 @@
 
       <div class="">
         <div class="list">
-          <a href="select-program.html" class="colorless">
+          <a href="stock-count.html" class="colorless">
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/stock.png"> -->
