--- a/app/views/mobile app stock requisition/stock-count.html
+++ b/app/views/mobile app stock requisition/stock-count.html
@@ -19,7 +19,7 @@
     <div class="header">
       <div class="row">
         <div class="col-xs-8">
-          <h5><a href="select-program.html" class="colorless"><i class="fa fa-chevron-left icon"></i></a>Stock Count</h5>
+          <h5><a href="home.html" class="colorless"><i class="fa fa-chevron-left icon"></i></a>Stock Count History</h5>
         </div>
 
         <div class="col-xs-4 text-right">
@@ -28,233 +28,107 @@
       </div>
     </div>
 
-    <!--SubHeader-->
     <div class="container subheader">
       <div class="row">
         <div class="col-xs-8">
-          <h6 class="dark-grey">3/5 COMPLETED</h6>
-          <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-              <span class="sr-only">60% Complete</span>
-            </div>
+          <div class="dropdown">
+            <button class="btn btn-select-program dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Select program
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><a href="#">RI</a></li>
+              <li><a href="#">Pharmaceutical</a></li>
+            </ul>
           </div>
         </div>
-        <div class="col-xs-4 text-right green">
-          <h6><i class="fa fa-check"></i><strong> ONLINE </strong></h6>
-          <!-- <i class="fa fa-search dark-grey fa-border"></i> -->
+        <div class="col-xs-4 text-right">
+          <h6 class="green" style="margin-top: 20px"><i class="fa fa-check"></i><strong> ONLINE </strong></h6>
         </div>
       </div>
     </div>
 
-    <!--Products-->
     <div class="container">
-    <div class="table-responsive">
-      <table class="table">
-        <thead>
-          <tr class="dark-grey">
-            <th width="50%">STOCK ITEM </th>
-            <th width="30%">COUNT</th>
-            <th width="20%">UoM </th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr class="category-row">
-            <td class="product-column" onclick="input" data-toggle="modal" href="#myModal"><p>BCG 20</p></td>
-            <td class="product-column blue"><p>20</p></td>
-            <td class="product-column  blue"><p>doses</p></td>
-          </tr>
-
-          <tr class="category-row">
-            <td class="product-column" onclick="input" data-toggle="modal" href=""><p>Measles 10</p></td>
-            <td class="product-column blue">
-              <p>
-                <div class="input-group">
-                  <input type="number" class="form-control" placeholder="" aria-describedby="basic-addon1">
-                </div>
-              </p>
-            </td>
-            <td class="product-column blue"><p>doses</p></td>
-          </tr>
-
-          <tr class="category-row">
-            <td class="product-column" onclick="input" data-toggle="modal" href=""><p>OPV 10</p></td>
-            <td class="product-column blue"><p>20</p></td>
-            <td class="product-column blue"><p>vials</p></td>
-          </tr>
-
-          <tr class="category-row">
-            <td class="product-column" onclick="input" data-toggle="modal" href=""><p>Penta 10</p></td>
-            <td class="product-column blue"><p>40</p></td>
-            <td class="product-column blue"><p>doses</p></td>
-          </tr>
-
-          <tr class="category-row">
-            <td class="product-column" onclick="input" data-toggle="modal" href=""><p>HepB 10</p></td>
-            <td class="product-column blue">
-              <p>
-                <div class="input-group">
-                  <input type="number" class="form-control" placeholder="" aria-describedby="basic-addon1">
-                </div>
-              </p>
-            </td>
-            <td class="product-column blue"><p>doses</p></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <!--Save-->
-    <div class="container text-center">
-      <button type="button" class="btn btn-block btn-save"><a class="colorless" role="button" data-toggle="modal" data-target="#myModal">SAVE</a></button>
-    </div>
-
-    <!-- Modal -->
-      <div  id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content modal-saved">
-
-            <div class="modal-body">
-              <div class="push"></div>
-              <div class="text-center">
-                <i class="fa fa-check-circle fa-2x"></i>
-              </div>
-              <h4 class="text-center"> Stock Count Saved! </h4>
-            </div>
-            <div class="modal-footer">
-              <a role="button" class="btn btn-block btn-saved" href="home.html"><h5>OK</h5></a>
-            </div>
-          </div>
-
+      <div class="row list">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+          <h6><a role="button" href="new-stock-count.html" class="btn btn-block request-new">
+            <i class="fa fa-plus icon"></i>New Stock Count
+          </a></h6>
         </div>
       </div>
+    </div>
 
+    <div class="home-heading spacer"></div>
 
-  <!-- Modal -->
-    <!-- <div  id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <div class="push"></div> -->
-
-        <!-- Modal content-->
-        <!-- <div class="modal-content">
-          <div class="modal-header text-right dark-grey">
-            <h5 type="button" data-dismiss="modal" aria-label="Close"><i class="fa fa-close icon" aria-hidden="true"></i>DONE</h5>
-          </div>
-
-          <div class="modal-body">
-            <div class= "row hide" data-step="1">
-              <h4 class="modal-title text-center">BCG 20</h4>
-              <div class="row product-detail">
-                <div class="col-xs-12">
-                  <div class="input-group-product">
-                    <span class="input-group-btn">
-                  	  <button class="btn btn-default btn-number red btn-minus qty-field" type="button"><span class="fa fa-minus"></span></button>
-                  	</span>
-                  	<input type="text" class="form-control text-center qty-field" maxlength="3" value="0 Vials">
-                  	<span class="input-group-btn">
-									    <button class="btn btn-default btn-number green btn-plus qty-field" type="button"><span class="fa fa-plus"></span></button>
-									  </span>
-									</div>
-                </div>
-
-                <div class="col-xs-12 text-center stock-count-label-summary">
-                  <h4 class="">1 vial = 20 doses</h4>
-                </div>
-
-              </div>
-            </div>
-
-            <div class= "row hide" data-step="2">
-              <h4 class="modal-title text-center">Measles 10</h4>
-              <div class="row product-detail">
-                <div class="col-xs-12">
-                  <div class="input-group-product">
-                    <span class="input-group-btn">
-                  	  <button class="btn btn-default btn-number red btn-minus qty-field" type="button"><span class="fa fa-minus"></span></button>
-                  	</span>
-                  	<input type="text" class="form-control text-center qty-field" maxlength="3" value="0 Vials">
-                  	<span class="input-group-btn">
-									    <button class="btn btn-default btn-number green btn-plus qty-field" type="button"><span class="fa fa-plus"></span></button>
-									  </span>
-									</div>
-                </div>
-
-                <div class="col-xs-12 text-center stock-count-label-summary">
-                  <h4 class="">1 vial = 10 doses</h4>
-                  <h4></h4>
-                </div>
-
-              </div>
-            </div>
-
-            <div class= "row hide" data-step="3">
-              <h4 class="modal-title text-center">OPV 10</h4>
-              <div class="row product-detail">
-                <div class="col-xs-12">
-                  <div class="input-group-product">
-                    <span class="input-group-btn">
-                  	  <button class="btn btn-default btn-number red btn-minus qty-field" type="button"><span class="fa fa-minus"></span></button>
-                  	</span>
-                  	<input type="text" class="form-control text-center qty-field" maxlength="3" value="0 Vials">
-                  	<span class="input-group-btn">
-									    <button class="btn btn-default btn-number green btn-plus qty-field" type="button"><span class="fa fa-plus"></span></button>
-									  </span>
-									</div>
-                </div>
-
-                <div class="col-xs-12 text-center stock-count-label-summary">
-                  <h4 class="">1 vial = 10 doses</h4>
-                </div>
-
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <div class="row">
-              <div class="col-xs-6 text-center">
-                <button type="button" class="btn btn-blue qty-field js-btn-step" data-orientation="previous"><i class="fa fa-arrow-left icon left"></i>Previous</button>
-              </div>
-              <div class="col-xs-6 text-center">
-                <button type="button" class="btn btn-blue qty-field js-btn-step" data-orientation="next">Next<i class="fa fa-arrow-right icon right"></i></button>
-              </div>
-            </div>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+        <h5 class="">Previous Stock Counts</h5>
         </div>
-
       </div>
-    </div> -->
+    </div>
 
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/src/jquery-bootstrap-modal-steps.js"></script>
 
-<script>
-  $('#myModal').modalSteps();
+    <div class="container">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+          <tr>
+            <th class=""><h5>DATE</h5></th>
+            <th class="text-center"><h5>DONE</h5> </th>
+            <th><h5>SYNCED</h5></th>
+            <th> </th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><p><strong>28 May 2016</strong></p></td>
+              <td class="text-center"><i class="fa fa-close red"></i></td>
+              <td class="text-center"><i class="fa fa-close red"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
 
-  $('.btn-minus').on('click', function(){
-   var value = parseInt($(this).parent().siblings('input').val())
-   if (isNaN(value) || !isFinite(value)) {
-      value = 1
-   }
+            <tr>
+              <td><p><strong>01 Apr 2016</strong></p></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-center"><i class="fa fa-close red"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
 
-   if (value < 1) {
-      value = 1
-   }
-$(this).parent().siblings('input').val(value - 1 + ' Vials')
-})
+            <tr>
+              <td><strong><p>16 Mar 2016</strong></p></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
 
-$('.btn-plus').on('click', function(){
-   var value = parseInt($(this).parent().siblings('input').val())
-   if (isNaN(value) || !isFinite(value)) {
-      value = -1
-   }
-$(this).parent().siblings('input').val(value + 1 + ' Vials')
-})
-</script>
+            <tr>
+              <td><p><strong>22 Feb 2016</strong></p></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
 
-</body>
+            <tr>
+              <td><strong><p>09 Dec 2015</strong></p></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
 
-</html>
+            <tr>
+              <td><p><strong>17 Nov 2015</strong></p></td>
+              <td class="text-center"><i class="fa fa-check green"></i></td>
+              <td class="text-center"><i class="fa fa-close red"></i></td>
+              <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  </body>
+  </html>
