--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -1,7 +1,7 @@
 <a id="top"></a>
 <div ui-view="header"></div>
 
-<section class="container">
+<section class="container-fluid">
   <div ui-view="content">
     <div ui-view></div>
   </div>
