--- a/app/views/mobile-app-redesign/assets/css/move.css
+++ b/app/views/mobile-app-redesign/assets/css/move.css
@@ -659,7 +659,7 @@ padding-left: 0px;
 .modal-intro {
   color: #f5f5f5;
   width: 90%;
-  height: 90vh;
+  /*height: 80vh;*/
   position: relative;
   margin: 10% auto;
   padding: 5px 10px 13px 10px;
