--- a/app/views/mobile-app-redesign/landing.html
+++ b/app/views/mobile-app-redesign/landing.html
@@ -73,12 +73,13 @@
               </div>
               <div class="modal-body">
                 <p>Welcome! Here's a brief overview of what you need to do:</p>
-                <p><ul class="fa-ul">
-                  <li class="spacer"> <i class="fa-li fa fa-info-circle"></i> Fill in contact information for this facility</li>
-                  <li class="spacer"> <i class="fa-li fa fa-briefcase"></i> Select and configure the programs this facility is currently participating in</li>
-                  <li class="spacer"> <i class="fa-li fa fa-asterisk"></i> Fill in Cold Chain equipment information</li>
-                  <li class="spacer"> <i class="fa-li fa fa-map-marker"></i> Configure locations this facility delivers or receives stock from</li>
-                </ul></p>
+                <ul class="fa-ul">
+                  <li class="spacer"> <p><i class="fa-li fa fa-lock"></i> If you don't have an email address and password to log in, contact your administrator or call <strong>08012345678</strong></p></li>
+                  <li class="spacer"> <p><i class="fa-li fa fa-info-circle"></i> Fill in contact information for this facility</p></li>
+                  <li class="spacer"> <p><i class="fa-li fa fa-briefcase"></i> Configure programs this facility participates in</p></li>
+                  <li class="spacer"> <p><i class="fa-li fa fa-asterisk"></i> Fill in equipment information (cold chain units, generators, etc)</p></li>
+                  <li class="spacer"> <p><i class="fa-li fa fa-map-marker"></i> <p>Configure locations this facility delivers or receives stock from</p></li>
+                </ul>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -86,7 +87,7 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                   </div> -->
                   <div class="col-xs-12">
-                    <a href="facility-profile.html" role="button" class="colorless btn btn-blue">Take me to Step 1</a>
+                    <a href="landing.html" role="button" class="colorless btn btn-green">Continue</a>
                   </div>
                 </div>
               </div>
