--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -53,12 +53,12 @@
       </form>
 
       <div class="row">
-        <div class="col-xs-8 col-sm-6">
-          <h5><i class="fa fa-key icon"></i>Forgot Password</h5>
+        <div class="col-xs-6 text-center">
+          <h5><i class="fa fa-key icon-right"></i>Forgot Password</h5>
         </div>
-        <div class="col-xs-4 col-sm-6 text-right">
+        <div class="col-xs-6 text-center">
           <a class="colorless" role="button" data-toggle="modal" ng-click="loginCtrl.openOnboardingModal()">
-            <h5><i class="fa fa-info-circle icon"></i>Help</h5>
+            <h5><i class="fa fa-info-circle icon right"></i>Help</h5>
           </a>
         </div>
       </div>
