--- a/app/views/onboarding/onboarding.html
+++ b/app/views/onboarding/onboarding.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="modal-content modal-intro">
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
         aria-hidden="true" ng-click="onboardingCtrl.close()">&times;</span>
@@ -20,7 +20,7 @@
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div> -->
         <div class="col-xs-12">
-          <button ng-click="onboardingCtrl.close()" class="colorless btn btn-green">
+          <button ng-click="onboardingCtrl.close()" class="colorless btn btn-save">
             <span>Continue</span>
           </button>
         </div>
