--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,7 +31,7 @@ body .pic {
     ),
     url("../images/blackbg.png") no-repeat center center fixed;
   background-size: cover;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body.gradient {
@@ -514,6 +514,7 @@ div.category-color{
   border: 1px solid #EF8D00;
   height: 48px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .btn-saved {
@@ -633,14 +634,18 @@ div.category-color{
 }
 
 .modal-intro {
-  color: #f5f5f5;
+  /*color: #f5f5f5;*/
   width: 90%;
   height: 80vh;
   position: relative;
   margin: 10% auto;
   padding: 5px 10px 13px 10px;
   border-radius: 10px;
-  background-color: rgba(239,141,0,0.95);
+  background-color: rgba(239, 239, 239, 0.95);
+}
+
+.modal-content {
+  background-color: whitesmoke;
 }
 
 .modal-saved {
