update on-boarding modal box ui

--- a/app/views/onboarding/onboarding.html
+++ b/app/views/onboarding/onboarding.html
@@ -7,12 +7,18 @@
       <h4 class="modal-title" id="myModalLabel">First time here?</h4>
     </div>
     <div class="modal-body" id="modal-body">
-      <ul>
-        <li>
-          Hello world!
-        </li>
+      <ul class="fa-ul">
+        <li class="spacer"> <p><i class="fa-li fa fa-lock"></i> If you don't have an email address and password to log in, contact your administrator or call <strong>08012345678</strong></p></li>
+
+        <li class="spacer"> <p><i class="fa-li fa fa-info-circle"></i> Fill in contact information for this facility</p></li>
+
+        <li class="spacer"> <p><i class="fa-li fa fa-briefcase"></i> Configure programs this facility participates in</p></li>
+
+        <li class="spacer"> <p><i class="fa-li fa fa-asterisk"></i> Fill in equipment information (cold chain units, generators, etc)</p></li>
+
+        <li class="spacer"> <p><i class="fa-li fa fa-map-marker"></i> </p><p>Configure locations this facility delivers or receives stock from</p></li>
+
       </ul>
-      Selected: <b>Testing</b>
     </div>
     <div class="modal-footer">
       <div class="row">
