--- a/app/views/loading-fixture/index.html
+++ b/app/views/loading-fixture/index.html
@@ -28,7 +28,7 @@
   <header>
     <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container">
-        <!-- this is used to show growl msg if error occur during app start up.-->
+        <!-- this is used to show growl msg if an error occurs during app start up.-->
       </div>
     </div>
   </header>
@@ -48,8 +48,16 @@
 
     <div class="container text-center">
       <div class="push"></div>
-      <span><i class="fa fa-spinner fa-5x fa-spin"></i></span>
-      <span class="sr-only">Loading...</span>
+      <!-- <span><i class="fa fa-spinner fa-5x fa-spin"></i></span>
+      <span class="sr-only">Loading...</span> -->
+      <div class="preloader">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
       <div class="push"></div>
       <h6>Loading app configuration</h6>
       <div class="push"></div>
