--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -393,9 +393,53 @@ td.product-column.text-right{
   height: 60px;
   padding: 15px;
 }
+
 .white-column {
-  height: 60px;
-  padding: 10px 15px;
+  /*height: 100%;
+  width: 100%;
+  padding: 20px;
+  margin: 10px 0;*/
+  padding: 20px;
+  padding-top: 12vh;
+  height: 33.3vh;
+  color: #ef8d00;
+  font-weight: 100;
+  background-color: white;
+}
+
+/*.test .row{
+  padding: 0;
+  margin: 0;
+  height: 33.3vh;
+  background-color: whitesmoke;
+}*/
+
+.test {
+  background-color: whitesmoke;
+}
+
+.test .col-xs-6, .test .col-md-6 {
+    padding: 0;
+}
+.test .left {
+    padding-left: 15px;
+}
+.test .right {
+    padding-right: 15px;
+}
+
+/*Artificial margins*/
+.mg-5-top {
+    margin-top: 5px;
+}
+.mg-5-bottom {
+    margin-bottom: 5px;
+}
+.mg-5-left {
+    margin-left: 5px;
+}
+.mg-5-right {
+    margin-right: 5px;
 }
 
 .list.green {
@@ -759,4 +803,56 @@ input.equipment {
 
 #sessionAccordion.panel .panel-default {
   overflow: visible;
+}
+
+/*Preloader*/
+@keyframes bars {
+    0%   {background-color:orange; height: 40px; top: -20px;}
+    25%  {background-color:#B8B7B9; height: 1px; top: 0px;}
+    50%  {background-color:#F7755D; height: 40px; top: -20px;}
+    75%   {background-color:#B8B7B9; height: 1px; top: 0px;}
+    100% {background-color:orange; height: 40px; top: -20px;}
+}
+
+.preloader {
+  height: 1px;
+  width: 150px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.preloader div {
+  width: 6px;
+  height: 40px;
+  position: absolute;
+  top: -20px;
+  left: 0;
+  background: orange;
+  perspective: 150px;
+  display: inline-block;
+  animation-name: bars;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  border-radius: 2px;
+}
+
+.preloader div:nth-child(2) {
+  animation-delay: .2s;
+  left: 30px;
+}
+.preloader div:nth-child(3) {
+  animation-delay: .4s;
+  left: 60px;
+}
+.preloader div:nth-child(4) {
+  animation-delay: .6s;
+  left: 90px;
+}
+.preloader div:nth-child(5) {
+  animation-delay: .8s;
+  left: 120px;
+}
+.preloader div:nth-child(6) {
+  animation-delay: 1s;
+  left: 150px;
 }
