--- a/assets/css/old-move.css
+++ b/assets/css/old-move.css
@@ -15,20 +15,6 @@ nav.navbar-move{
   border:0px;
 }
 
-.colorless {
-  color: inherit;
-}
-
-a:hover {
-  color:#ef8d00;
-}
-a:focus {
-  color:#ef8d00;
-}
-a:active {
-  color:#ef8d00;
-}
-
 /*@media (max-width: 800px) {
   button.navbar-toggle {
     background-color: white;
@@ -61,7 +47,7 @@ a:active {
 
 .brandlogo{
   margin-top:-10px;
-  width:90%;
+  width:15em;
 }
 
 .h1{
@@ -92,12 +78,8 @@ h3.center{
   margin-top:30px;
 }
 
-.white{
+h4.white{
   color:#f1f1f1;
-}
-
-.margin-bottom-40 {
-  margin-bottom: 40px;
 }
 
 .heroparagraph{
@@ -112,7 +94,7 @@ h3.center{
 }
 
 .btn-reg{
-  border-radius:4px;
+  border-radius:20px;
   padding-left:7.5px;
   padding-right:7.5px;
   padding-top:9px;
@@ -123,25 +105,25 @@ h3.center{
   text-align: center;
 }
 
-.btn-reg.orange{
-  background: #ef8d00;
+.btn-reg.blue{
+  background: #1774bc;
   color: #f5f5f5;
 }
 
 .btn-reg.white{
   background: transparent;
-  color: #ef8d00;
-  border: 1px solid #ef8d00;
+  color: #1774bc;
+  border: 1px solid #1774bc;
 }
 
-/*button.btn.btn-default.btn-orange.submit{
+button.btn.btn-default.btn-blue.submit{
   padding-left:20px;
   padding-right:20px;
   margin:0 auto;
   display:block;
   width:40%;
   margin-top:10px;
-}*/
+}
 
 
 div.button-div{
@@ -163,17 +145,14 @@ div.button-div{
   div.button-div{
     width: 100%;
   }
-  /*.brandlogo {
+  .brandlogo {
     width: 10em;
-  }*/
+  }
   .h3{
     font-size: 18px;
   }
   .h4 {
     font-size: 14px;
-  }
-  .hero-container {
-    width: 90%
   }
 }
 
@@ -211,7 +190,7 @@ div.button-div{
 
 div.content-wrap.small{
   max-width:600px;
-  /*text-align:center;*/
+  text-align:center;
 }
 
 .features-section{
@@ -259,12 +238,10 @@ div.col-sm-6.image.column{
 
 ul.list-group.features-list{
   list-style:none;
-  border: none;
 }
 
 li.list-group-item{
   background:transparent;
-  border: none;
 }
 
 .icon{
@@ -272,7 +249,7 @@ li.list-group-item{
   font-size:24px;
 }
 
-/*label.control-label.inline{
+label.control-label.inline{
   width:20%;
   text-align:left;
 }
@@ -289,7 +266,7 @@ textarea.form-control.inline{
   width:80%;
   margin-top:10px;
   margin-bottom:10px;
-}*/
+}
 
 img.footerlogo{
   margin:10px;
@@ -299,28 +276,77 @@ img.footerlogo{
   padding:40px;
 }
 
+.api-row{
+  margin-top:10px;
+  border:1px solid #c8c8c8;
+  border-radius:6px;
+  background-color:#f5f5f5;
+  text-align:center;
+  padding-top:10px;
+}
 
-.label-yellow {
-  background-color:#efb700;
-  text-transform: uppercase;
-  display: inline-block;
+.label-default{
+  text-transform:uppercase;
+  padding:5px;
+  text-align:center;
 }
-.label-dark-green {
+
+.label-default.green{
+  background-color:#18bc9c;
+}
+
+.label-default.darkgreen{
+  background-color:#028D94;
+}
+
+.label-default.blue{
+  background-color:#3498DB;
+}
+
+ul.list-group{
+  box-shadow: none;
+
+}
+
+li.list-group-item{
+  border:none;
+  list-style:none;
+}
+
+li.list-group-item.inline{
+  display:inline-block;
+  color:white;
+  margin-left:5px;
+  padding:5px;
+  text-transform:uppercase;
+  font-weight:700;
+  text-align:center;
+  font-size:12px;
+  margin: 0 5px 5px 5px;
+}
+
+li.list-group-item.inline.green{
+  background-color:#18bc9c;
+}
+
+li.list-group-item.inline.darkgreen{
   background-color:#028d94;
-  text-transform: uppercase;
-  display: inline-block;
 }
-.label-blue {
-  background-color:#0B549B;
-  text-transform: uppercase;
-  display: inline-block;
+
+li.list-group-item.inline.blue{
+  background-color:#3498db;
 }
-.circle{
-  border:1px solid #ef8d00;
+
+li.list-group-item.inline.circle{
+  border:1px solid #808285;
   border-radius:20px;
-  color:#ef8d00;
-  padding: 5px;
-  display: inline-block;
+  color:#808285;
+  font-size:small;
+}
+
+.a{
+  text-decoration:none;
+  color:inherit;
 }
 
 .about-section{
